--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@yfuks/react-native-action-sheet": "0.0.3",
     "firebase": "^4.1.3",
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
