--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
+    "react-native-check-box": "^1.0.4",
     "react-native-elements": "^0.13.0",
     "react-native-touchable-bounce": "^1.0.3",
     "react-native-vector-icons": "^4.2.0",
